<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.components.main.MainActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="#fff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/top_artists"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:textColor="#fff"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/num_registros"/>

                <TextView
                    android:id="@+id/text_view_numer_records"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:text="@string/default_0"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_swipe">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_tracks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/layout_no_records"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info_outline_gray_64dp"
            android:contentDescription="@string/icon_info"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_hay_canciones_almacenadas"/>

        <Button
            android:id="@+id/btn_search_tracks"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/consultar"/>


        <ProgressBar
            android:id="@+id/progress_circular_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>