<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.components.detail.DetailsActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_go_home"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"
                android:text="@string/volver"
                android:drawableStart="@drawable/ic_home_white_24dp"
                android:paddingStart="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:orientation="vertical"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/image_view_track"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:contentDescription="@string/track_image"
                    android:background="#000"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorLightGray"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/divider"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="10dp"
                                android:text="@string/title"
                                android:textColor="@color/colorBlack"/>

                            <TextView
                                android:id="@+id/text_view_title_detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/title"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="10dp"
                                android:text="@string/listeners"
                                android:drawableStart="@drawable/ic_supervisor_account_black_16dp"
                                android:drawablePadding="10dp"
                                android:textColor="@color/colorBlack"/>

                            <TextView
                                android:id="@+id/text_view_listeners"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/default_0"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="10dp"
                                android:text="@string/duration"
                                android:drawableStart="@drawable/ic_access_time_black_16dp"
                                android:drawablePadding="10dp"
                                android:textColor="@color/colorBlack"/>

                            <TextView
                                android:id="@+id/text_view_duration"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/default_0"/>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:text="@string/rank"
                            android:drawableStart="@drawable/ic_star_half_black_16dp"
                            android:drawablePadding="10dp"
                            android:textColor="@color/colorBlack"/>

                        <TextView
                            android:id="@+id/text_view_rank_details"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:gravity="center"
                            android:textSize="20sp"
                            android:text="@string/default_0"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/mbid"
                        android:drawableStart="@drawable/ic_vpn_key_black_16dp"
                        android:drawablePadding="10dp"
                        android:textColor="@color/colorBlack"/>

                    <TextView
                        android:id="@+id/text_view_mbid_track"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/default_0"/>
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorLightGray"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/divider"/>

                <Button
                    android:id="@+id/btn_browser_track"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@string/ver_track_online"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/name"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:id="@+id/text_view_name_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/mbid"
                    android:drawableStart="@drawable/ic_vpn_key_black_16dp"
                    android:drawablePadding="10dp"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:id="@+id/text_view_mbid_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/default_0"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/canciones"
                    android:drawableStart="@drawable/ic_vpn_key_black_16dp"
                    android:drawablePadding="10dp"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:id="@+id/text_view_number_songs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_0"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_browser_artist"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/ver_artiste_online"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>